<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical">
    <TextView
        android:id="@+id/id_viewlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logs"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/id_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Saisissez votre login"
        android:inputType="text" />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/id_viewpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:layout_marginEnd="8dp" />
        <EditText
            android:id="@+id/id_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Saisissez votre password"
            android:inputType="textPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/id_connex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conx" />
    <Button
        android:id="@+id/id_inscri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscr" />
</LinearLayout>